[gd_scene load_steps=13 format=3 uid="uid://bbacl0rg65cqc"]

[ext_resource type="Script" path="res://scripts/walking_bouncy_enemy.gd" id="1_fnxho"]
[ext_resource type="Texture2D" uid="uid://x0dydjhhldbx" path="res://assets/enemies/blob.png" id="2_o8lsn"]
[ext_resource type="Texture2D" uid="uid://coi0ujnh771xw" path="res://assets/enemies/blob-soothed.png" id="3_nevbn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jkvmi"]
atlas = ExtResource("2_o8lsn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjf52"]
atlas = ExtResource("2_o8lsn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q40of"]
atlas = ExtResource("3_nevbn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ym1e"]
atlas = ExtResource("3_nevbn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yft3q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkvmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjf52")
}],
"loop": true,
"name": &"angry",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q40of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ym1e")
}],
"loop": true,
"name": &"happy",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vl0jh"]
size = Vector2(12, 7)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iy1l0"]
radius = 8.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p0iw0"]
size = Vector2(10, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b8r8f"]

[node name="WalkingBouncyEnemy" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 16
collision_mask = 3
script = ExtResource("1_fnxho")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-9.53674e-07, -1)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_yft3q")
animation = &"happy"

[node name="CollisionWorld" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_vl0jh")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionAngry" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_iy1l0")

[node name="Timer" type="Timer" parent="."]

[node name="Bounce" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionBounce" type="CollisionShape2D" parent="Bounce"]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_p0iw0")

[node name="HurtTimer" type="Timer" parent="."]

[node name="HurtBox" type="Area2D" parent="." groups=["Soothable"]]
collision_layer = 128
collision_mask = 2

[node name="CollisionHurt" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_b8r8f")

[connection signal="body_entered" from="Hitbox" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Bounce" to="." method="_on_bounce_body_entered"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
